Apply proper styles to `.d-modal-cancel` button

--- a/scss/common/_modal.scss
+++ b/scss/common/_modal.scss
@@ -27,6 +27,17 @@
   font-size: $font-size-base;
 }
 
+.d-modal-cancel {
+  @extend %btn-flat-simple;
+  @extend %btn-footer;
+
+  margin: 0;
+
+  &:first-child {
+    margin-left: $card-inner-spacer-x;
+  }
+}
+
 .edit-category-modal {
   .edit-category-tab-general,
   .edit-category-tab-security {
