Apply proper styles to theme import input field

--- a/scss/common/_form.scss
+++ b/scss/common/_form.scss
@@ -229,3 +229,12 @@ textarea {
     }
   }
 }
+
+.upload-selector .radios .inputs {
+  input {
+    @extend %text-field-box;
+
+    margin-bottom: $text-field-margin-y;
+    width: 100%;
+  }
+}
