--- a/scss/common/_modal.scss
+++ b/scss/common/_modal.scss
@@ -29,12 +29,13 @@
 
 .d-modal-cancel {
   @extend %btn-flat-simple;
-  @extend %btn-footer;
 
-  margin: 0;
+  margin: 0 0 0 $card-inner-spacer-x;
+  padding-right: $card-inner-spacer-x;
+  padding-left: $card-inner-spacer-x;
 
-  &:first-child {
-    margin-left: $card-inner-spacer-x;
+  &:last-child {
+    margin-left: 0;
   }
 }
 
@@ -226,7 +227,14 @@
 
   :not(.disclaimer) a {
     @extend %btn-flat;
-    @extend %btn-footer;
+
+    margin-left: $card-inner-spacer-x;
+    padding-right: $card-inner-spacer-x;
+    padding-left: $card-inner-spacer-x;
+
+    &:last-child {
+      margin-left: 0;
+    }
 
     &.btn-primary {
       body .bootbox.modal & {
@@ -236,12 +244,12 @@
   }
 
   .btn {
-    @extend %btn-footer;
+    margin: 0 0 0 $card-inner-spacer-x;
+    padding-right: $card-inner-spacer-x;
+    padding-left: $card-inner-spacer-x;
 
-    margin: 0;
-
-    &:first-child {
-      margin-left: $card-inner-spacer-x;
+    &:last-child {
+      margin-left: 0;
     }
   }
 }
