Convert fa arrows h to md swap horiz

--- a/scss/common/_material-icons.scss
+++ b/scss/common/_material-icons.scss
@@ -6,6 +6,10 @@
   @include material-icons('arrow_downward');
 }
 
+.fa-arrows-h {
+  @include material-icons('swap_horiz');
+}
+
 .fa-arrow-up {
   @include material-icons('arrow_upward');
 }
