Convert fa columns to md view column

--- a/scss/common/_material-icons.scss
+++ b/scss/common/_material-icons.scss
@@ -114,6 +114,10 @@
   @include material-icons('code');
 }
 
+.fa-columns {
+  @include material-icons('view_column');
+}
+
 .fa-copy {
   @include material-icons('content_copy');
 }
