Convert fa forward to md fast forward

--- a/scss/common/_material-icons.scss
+++ b/scss/common/_material-icons.scss
@@ -206,6 +206,10 @@
   @include material-icons('archive');
 }
 
+.fa-forward {
+  @include material-icons('fast_forward');
+}
+
 .fa-gavel {
   @include material-icons('gavel');
 }
