Reply edit reason style fix

--- a/scss/common/_reply.scss
+++ b/scss/common/_reply.scss
@@ -205,6 +205,17 @@
     height: auto;
   }
 
+  #edit-reason {
+    background-color: color-chooser($black-divider, $white-divider);
+    border-bottom: 0;
+    display: inline-block;
+    font-size: $font-size-small;
+    height: ($font-size-base * $line-height-base);
+    margin: 0 0 0 ($card-inner-spacer-x / 2);
+    padding: 0 ($card-inner-spacer-x / 2);
+    width: auto;
+  }
+
   .grippie {
     align-items: center;
     background-color: color-chooser($dropdown-bg-light, $dropdown-bg-dark);
