--- a/scss/common/_reply.scss
+++ b/scss/common/_reply.scss
@@ -417,6 +417,40 @@
     }
   }
 
+  .user-selector {
+    margin-top: ($card-inner-spacer-y / 2);
+    margin-bottom: ($card-inner-spacer-y / 2);
+    padding-left: $card-padding-x;
+
+    .ac-wrap {
+      background-color: transparent;
+      border-top: 0;
+      border-right: 0;
+      border-left: 0;
+      border-radius: 0;
+      padding: 0 $text-field-padding-x;
+
+      @include focus-hover {
+        border-width: $text-field-border-width;
+        box-shadow: inset 0 ($text-field-border-width * -2) 0 ($text-field-border-width * -1) color-chooser($text-field-border-color-dark, $text-field-border-color-light);
+      }
+
+      input[type='text'] {
+        margin-top: $text-field-padding-y;
+        margin-bottom: ($text-field-padding-y - $text-field-border-width);
+      }
+
+      .item {
+        margin-top: 1px;
+        margin-bottom: 1px;
+      }
+    }
+
+    .add-warning {
+      margin-bottom: 0;
+    }
+  }
+
   .wmd-controls .d-editor-preview {
     border: 0;
     border-left: 1px solid color-chooser($white-divider, $black-divider);
