--- a/scss/common/_admin.scss
+++ b/scss/common/_admin.scss
@@ -144,7 +144,7 @@
         width: auto !important;
 
         .item {
-          margin: (($text-field-height - $chip-height) / 2) $spacer-xs (($text-field-height - $chip-height) / 2) 0;
+          margin: ($spacer-xs / 2) $spacer-xs ($spacer-xs / 2) 0;
         }
       }
     }
@@ -192,6 +192,10 @@
       margin-right: 0;
       margin-left: $card-inner-spacer-x;
     }
+  }
+
+  .ac-wrap {
+    display: inline-flex;
   }
 
   .controls {
@@ -612,7 +616,7 @@ div {
       }
 
       .ac-wrap .item {
-        margin-right: $card-inner-spacer-x;
+        margin-right: $spacer-xs;
 
         .avatar {
           height: $chip-height;
@@ -1103,10 +1107,6 @@ div {
     .ac-wrap {
       margin-bottom: $card-inner-spacer-x;
       width: auto !important;
-
-      input[type='text'] {
-        @extend %text-field-box;
-      }
     }
 
     .desc,
