Reduce user preference page bottom spacing

--- a/scss/common/_user-badge.scss
+++ b/scss/common/_user-badge.scss
@@ -96,6 +96,10 @@
     margin-bottom: $spacer-lg;
 
     > p {
+      &:last-child {
+        margin-bottom: 0;
+      }
+
       .more {
         @extend %btn-flat;
         @extend %btn-raised;
