Mobile: reduce user summary page bottom spacing

--- a/scss/mobile/_user.scss
+++ b/scss/mobile/_user.scss
@@ -13,6 +13,7 @@
 
 .top-section:not(.badges-section):not(.stats-section) {
   flex-direction: column;
+  margin-bottom: 0;
 }
 
 .top-sub-section {
