--- a/scss/common/_user.scss
+++ b/scss/common/_user.scss
@@ -1,3 +1,54 @@
+.admin-user .details {
+  @extend %card;
+
+  margin-bottom: $spacer-lg;
+
+  h1 {
+    @extend %typography-h4;
+
+    border-bottom-width: 1px;
+    margin: 0;
+    padding: $card-padding-y $card-padding-x;
+  }
+}
+
+.display-row {
+  min-height: $tbody-cell-height;
+  padding: $tbody-cell-padding-y $card-padding-x;
+
+  input[type='text'] {
+    @extend %text-field-box;
+
+    margin-bottom: 0;
+  }
+
+  .controls,
+  .value {
+    margin-left: ($tbody-cell-padding-x * 2);
+  }
+
+  .controls {
+    a[data-ember-action] {
+      @extend %btn-flat-simple;
+      @extend %btn-raised;
+    }
+
+    .btn {
+      margin: 0 $spacer-xs 0 0;
+    }
+  }
+
+  .field {
+    margin-left: 0;
+  }
+
+  .long-value {
+    button {
+      margin-left: $spacer-xs;
+    }
+  }
+}
+
 .likes-section,
 .links-section {
   .user-info {
@@ -108,6 +159,10 @@
       }
     }
   }
+}
+
+.user-controls {
+  padding: $card-padding-y $card-padding-x;
 }
 
 .user-main {
