Convert fa list alt to md list

--- a/scss/common/_material-icons.scss
+++ b/scss/common/_material-icons.scss
@@ -250,6 +250,10 @@
   @include material-icons('list');
 }
 
+.fa-list-alt {
+  @include material-icons('list');
+}
+
 .fa-list-ol {
   @include material-icons('format_list_numbered');
 }
