Convert fa microphone slash to md mic off

--- a/scss/common/_material-icons.scss
+++ b/scss/common/_material-icons.scss
@@ -278,6 +278,10 @@
   @include material-icons('mic');
 }
 
+.fa-microphone-slash {
+  @include material-icons('mic_off');
+}
+
 .fa-minus {
   @include material-icons('remove');
 }
